--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "postversion": "npm publish"
   },
   "peerDependencies": {
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1"
+    "prop-types": ">= 15.5",
+    "react": ">= 15.5"
   },
   "devDependencies": {
     "prop-types": "^15.5.10",
